<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">COMBOBOX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="eventos">Meus eventos</string>
    <string name="listas">Minhas listas</string>
    <string name="cotacoes">Minhas cotações</string>
    <string name="amizades">Minhas amizades</string>
    <string name="senha">Senha:</string>
    <string name="usuario">Usuário:</string>
    <string name="finalizar">Finalizar Evento</string>
    <string name="entrar">Entrar</string>
    <string name="sobre_mim">Meu Perfil</string>
    <string name="sair">Sair</string>
    <string name="evento_convidado">Eventos convidados</string>
    <string name="configuracao">Configuração</string>
    <string name="servidor">Servidor</string>
    <string name="salvar">Salvar</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="sobre">Sobre</string>
    <string name="melhorias">Envie melhorias</string>
    <string name="enviar">Enviar</string>
    <string name="merge">Merge</string>
    <string name="findProduct">Procurar</string>
    <string name="newProduct">Novo Produto</string>
    <string name="cap_foto">Capturar foto</string>
    <string name="buscar">Buscar</string>
    <string name="nao_contem">Produtos em falta</string>
    <string name="sel_marca">Selecione uma marca</string>
    <string name="sel_divisao">Selecione uma divisão</string>
    <string name="sel_familia">Selecione uma família</string>
    <string name="sel_pref">Selecione sua preferência</string>
    <string name="cadastrar">Cadastre-se</string>
    <string name="sucesso_merge">Após a finalização do evento, os produtos mais baratos irão aparecer em suas cotações!</string>
    <string name="sucesso_finalizar_merge">Evento finalizado com sucesso!</string>

    <string name="txt_cadastro">
  <![CDATA[
      <p><b>No momento o cadastro para acesso ao COMBOBOX está sendo feito somente através do site <a href="http://www.combobox.com.br/sis">http://www.combobox.com.br/sis</a></b></p>
    ]]>
    </string>

</resources>
